--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc && npx tsc-alias",
+    "lint": "eslint --ignore-path .gitignore --ext .ts src/",
+    "lint:fix": "npm run lint -- --fix",
+    "dev": "cross-env NODE_ENV=development nodemon",
+    "start": "npm run build && cross-env NODE_ENV=production node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "envalid": "^7.2.2",
     "express": "^4.17.1",
@@ -34,6 +39,8 @@
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
-    "eslint": "^8.1.0"
+    "eslint": "^8.1.0",
+    "nodemon": "^2.0.14",
+    "tsconfig-paths": "^3.11.0"
   }
 }
